--- a/src/components/ui/showcase/showcase.module.scss
+++ b/src/components/ui/showcase/showcase.module.scss
@@ -55,7 +55,7 @@
       justify-content: flex-start;
     }
     &__description {
-      max-width: 300px;
+      max-width: 245px;
     }
     &__buttonContainer {
       justify-content: flex-end;
